--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,22 +3,25 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/t2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.intents.interestcalculator.MainActivity">
+    tools:context="com.example.intents.interestcalculator.MainActivity"
+    tools:layout_editor_absoluteX="0dp"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
         android:id="@+id/Years"
-        android:layout_width="150dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/IR_bar"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="2dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:text="In Months"
+        android:layout_marginTop="29dp"
+        android:text="Months"
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/Interest_Rate"/>
 
 
@@ -26,156 +29,156 @@
         android:id="@+id/calculate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calculate"
         android:layout_below="@+id/month"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/t1"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:text="Calculate"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintHorizontal_bias="0.501"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <EditText
         android:id="@+id/IR_bar"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/Years"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="-11dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="42dp"
+        android:background="@drawable/border1"
         android:ems="10"
         android:inputType="number"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/Interest_Rate"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/PA_bar">
+        app:layout_constraintTop_toBottomOf="@+id/PA_bar"
+        >
 
-        <requestFocus />
+        <requestFocus/>
     </EditText>
 
     <TextView
         android:id="@+id/Interest_Rate"
-        android:layout_width="150dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_above="@+id/IR_bar"
         android:layout_alignLeft="@+id/IR_bar"
-        android:layout_marginLeft="2dp"
         android:layout_marginStart="8dp"
         android:text="Interest Rate"
         android:textSize="20sp"
+        android:layout_marginTop="33dp"
+        app:layout_constraintTop_toBottomOf="@+id/PA"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="34dp"
-        app:layout_constraintTop_toBottomOf="@+id/PA"/>
+        app:layout_constraintRight_toLeftOf="@+id/IR_bar"
+        android:layout_marginRight="8dp"
+        app:layout_constraintHorizontal_bias="0.0"/>
 
     <TextView
         android:id="@+id/PA"
-        android:layout_width="150dp"
+        android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/PA_bar"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:text="Amount"
         android:textSize="20sp"
+        app:layout_constraintRight_toLeftOf="@+id/PA_bar"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        />
+        app:layout_constraintHorizontal_bias="0.0"/>
 
     <EditText
         android:id="@+id/PA_bar"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/Interest_Rate"
         android:layout_below="@+id/PA"
-        android:ems="10"
-        android:inputType="number"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/PA"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"/>
-
-    <EditText
-        android:id="@+id/month"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/IR_bar"
-        android:layout_alignRight="@+id/IR_bar"
-        android:layout_below="@+id/Years"
-        android:layout_marginEnd="12dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/border1"
         android:ems="10"
         android:inputType="number"
-        android:layout_marginRight="12dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/IR_bar"/>
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/t1"
-        android:layout_width="80dp"
+        android:layout_width="100dp"
         android:layout_height="17dp"
         android:layout_below="@+id/calculate"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_toRightOf="@+id/PA"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
+        android:layout_toRightOf="@+id/PA"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/textView"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintHorizontal_bias="0.63"/>
 
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="15dp"
-        android:onClick="onRadioButtonClicked"
+        android:onClick="start_date"
         android:text="Start Date"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/month"/>
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="38dp"
+        app:layout_constraintTop_toBottomOf="@+id/month"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="15dp"
-        android:text="Last Date"
-        app:layout_constraintLeft_toRightOf="@+id/button"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/month"/>
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <EditText
+        android:id="@+id/month"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="0dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="14dp"
+        android:background="@drawable/border1"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="@+id/Years"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/IR_bar"
+        app:layout_constraintVertical_bias="0.947"/>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="22dp"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintBottom_toBottomOf="@+id/t1"
+        android:layout_marginBottom="0dp"/>
 
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="29dp"
         android:clickable="false"
         android:orientation="horizontal"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button">
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/button"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent">
 
         <RadioButton
             android:id="@+id/radioButton2"
@@ -184,7 +187,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="20dp"
-            android:checked="true"
+            android:checked="false"
             android:onClick="onRadioButtonClicked"
             android:text="Monthly"
             app:layout_constraintHorizontal_bias="0.544"
@@ -205,5 +208,29 @@
             tools:layout_editor_absoluteY="301dp"
             />
     </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="DUE DATE"
+        android:layout_marginTop="36dp"
+        app:layout_constraintTop_toBottomOf="@+id/calculate"
+        app:layout_constraintRight_toLeftOf="@+id/textView3"
+        android:layout_marginRight="84dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.299"/>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="INTEREST"
+        android:layout_marginTop="36dp"
+        app:layout_constraintTop_toBottomOf="@+id/calculate"
+        android:layout_marginRight="77dp"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 
 </android.support.constraint.ConstraintLayout>
