--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,13 +16,13 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/IR_bar"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="29dp"
         android:text="Months"
         android:textSize="20sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Interest_Rate"/>
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@+id/Interest_Rate"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
 
     <Button
@@ -47,15 +47,13 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/Years"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="-11dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="42dp"
         android:background="@drawable/border1"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/PA_bar"
-        >
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent">
 
         <requestFocus/>
     </EditText>
@@ -69,13 +67,10 @@
         android:layout_marginStart="8dp"
         android:text="Interest Rate"
         android:textSize="20sp"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/PA"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/IR_bar"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0"/>
+        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <TextView
         android:id="@+id/PA"
@@ -86,13 +81,12 @@
         android:layout_marginStart="8dp"
         android:text="Amount"
         android:textSize="20sp"
-        app:layout_constraintRight_toLeftOf="@+id/PA_bar"
-        android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintHorizontal_bias="0.0"/>
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/PA_bar"
+        android:layout_marginBottom="8dp"/>
 
     <EditText
         android:id="@+id/PA_bar"
@@ -101,15 +95,13 @@
         android:layout_alignLeft="@+id/Interest_Rate"
         android:layout_below="@+id/PA"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
         android:background="@drawable/border1"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        android:layout_marginTop="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/t1"
@@ -117,55 +109,39 @@
         android:layout_height="17dp"
         android:layout_below="@+id/calculate"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_toRightOf="@+id/PA"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/textView"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintHorizontal_bias="0.63"/>
-
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="start_date"
-        android:text="Start Date"
-        android:layout_marginTop="38dp"
-        app:layout_constraintTop_toBottomOf="@+id/month"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"/>
+
 
     <EditText
         android:id="@+id/month"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="14dp"
         android:background="@drawable/border1"
         android:ems="10"
         android:inputType="number"
-        app:layout_constraintBottom_toBottomOf="@+id/Years"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="30dp"
         app:layout_constraintTop_toBottomOf="@+id/IR_bar"
-        app:layout_constraintVertical_bias="0.947"/>
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"/>
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintBottom_toBottomOf="@+id/t1"
-        android:layout_marginBottom="0dp"/>
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"/>
 
     <RadioGroup
         android:id="@+id/radioGroup"
@@ -173,12 +149,14 @@
         android:layout_height="wrap_content"
         android:clickable="false"
         android:orientation="horizontal"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/editText"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent">
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
 
         <RadioButton
             android:id="@+id/radioButton2"
@@ -214,23 +192,48 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="DUE DATE"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/calculate"
-        app:layout_constraintRight_toLeftOf="@+id/textView3"
-        android:layout_marginRight="84dp"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.299"/>
+        android:layout_marginStart="8dp"/>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="INTEREST"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/calculate"
-        android:layout_marginRight="77dp"
-        app:layout_constraintRight_toRightOf="parent"/>
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginEnd="8dp"/>
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="30dp"
+        android:ems="10"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/month"
+        android:layout_marginEnd="8dp"/>
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="30dp"
+        android:text="Select the date"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/Years"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
+        android:layout_marginStart="8dp"/>
+
+
 
 
 </android.support.constraint.ConstraintLayout>
